	* Makefile.am : don't try to call test.sh in interfaces/R
	* interfaces/python/test.py : added new test cases
	* interfaces/python/graphobject.c,
	  interfaces/python/graphobject.h : added wrappers for 3D layouts,
	  igraph_decompose, igraph_write_pajek, igraph_layout_lgl,
	  igraph_layout_grid_fruchterman_reingold
	  
2006-02-10  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>

	* src/structural_properties.c (igraph_get_all_shortest_paths) : added

2006-02-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-pajek-parser.y : better vertex and edge parameter 
	handling, support for adjacency matrices

2006-02-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) :added
	* src/foreign-pajek-lexer.l : added
	* src/foreign-pajek-parser.y : added
	* examples/simple/foreign.c : added

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : motif count correct even
	if search tree is cut, works with graphs containing loops

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : added randomized cuts
	* examples/simple/igraph_motifs_randesu.c : updated

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_search) : added

	* src/motifs.c (igraph_motifs_randesu) : isomorphism classes added
	* src/topology.c (igraph_isoclass_subgraph) : added

	* examples/simple/topology.c : added
	* examples/simple/igraph_layout_lgl.c : smaller graph, faster
	* examples/simple/igraph_motifs_randesu.c : updated

2006-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : bug corrected

2006-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_stack.c (igraph_stack_top) : added

	* src/motifs.c (igraph_motifs_randesu) : added
	* examples/simple/igraph_motifs_randesu.c : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_binsearch) : bug corrected

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
